first section mobile

--- a/index.html
+++ b/index.html
@@ -20,13 +20,11 @@
         <div class="main__flame">
             <div class="main__flame__single red"></div>
             <div class="main__flame__single orange"></div>
-            <div class="main__flame__single gold"></div>
-            <div class="main__flame__single white"></div>
         </div>
         <ul class="social">
             <li class="social__icon">
                 <a href="#">
-                    <img src="./images/Vector-1.svg" alt="ig">
+                    <img src="./images/Vector-4.svg" alt="ig">
                 </a>
             </li>
             <li class="social__icon">
@@ -40,6 +38,7 @@
                 </a>
             </li>
         </ul>
+        <img src="./images/wave.svg" alt="wave" class="main__svg">
     </section>
     <section class="project">
 
