mobile | project section

--- a/index.html
+++ b/index.html
@@ -41,7 +41,28 @@
         <img src="./images/wave.svg" alt="wave" class="main__svg">
     </section>
     <section class="project">
-
+        <h1 class="project__title">
+            Project
+        </h1>
+        <div class="project__wrapper">
+            <ul class="list">
+                <li class="list__item">
+                    <a href="#">
+                        <img src="./images/exchange.png" alt="exchange">
+                    </a>
+                </li>
+                <li class="list__item">
+                    <a href="#">
+                        <img src="./images/forms.png" alt="form">
+                    </a>
+                </li>
+                <li class="list__item">
+                    <a href="#">
+                        <img src="./images/weather-app.png" alt="weather-app">
+                    </a>
+                </li>
+            </ul>
+        </div>
     </section>
 </body>
 
