replace skills&project section, add basic html to contact

--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
         </ul>
         <img src="./images/wave.svg" alt="wave" class="main__svg">
     </section>
+    <section class="skills">
+        <h1>
+            Skills section
+        </h1>
+
+        <img src="./images/wave2.svg" alt="wave" class="skills__svg">
+    </section>
     <section class="project">
+
         <h1 class="project__title">
             Project
         </h1>
@@ -63,6 +71,12 @@
                 </li>
             </ul>
         </div>
+        <img src="./images/wave.svg" alt="wave" class="main__svg">
+    </section>
+    <section class="contact">
+        <h1>
+            get in touch!
+        </h1>
     </section>
 </body>
 
