add skills section, and basics style

--- a/index.html
+++ b/index.html
@@ -41,10 +41,76 @@
         <img src="./images/wave.svg" alt="wave" class="main__svg">
     </section>
     <section class="skills">
-        <h1>
-            Skills section
+        <h1 class="skills__title">
+            My technology & skills
         </h1>
+        <ul class="knowledge">
 
+            <li class="knowledge__item">
+                <a href="#">
+                    <img class="test" src="./images/html5.svg" alt="html">
+                    <span class="subtitle">
+                        Junior
+                    </span>
+                </a>
+            </li>
+            <li class="knowledge__item">
+                <a href="#">
+                    <img class="test" src="./images/sass.svg" alt="sass">
+                    <span class="subtitle">
+                        Junior
+                    </span>
+                </a>
+            </li>
+            <li class="knowledge__item">
+                <a href="#">
+                    <img class="test" src="./images/javascript.svg" alt="javascript">
+                    <span class="subtitle">
+                        Junior
+                    </span>
+                </a>
+            </li>
+            <li class="knowledge__item">
+                <a href="#">
+                    <img class="test" src="./images/react.svg" alt="react">
+                    <span class="subtitle">
+                        basic
+                    </span>
+                </a>
+            </li>
+            <li class="knowledge__item">
+                <a href="#">
+                    <img class="test" src="./images/mysql.svg" alt="mySQL">
+                    <span class="subtitle">
+                        Basic
+                    </span>
+                </a>
+            </li>
+            <li class="knowledge__item">
+                <a href="#">
+                    <img class="test" src="./images/figma.svg" alt="figma">
+                    <span class="subtitle">
+                        Basic
+                    </span>
+                </a>
+            </li>
+            <li class="knowledge__item">
+                <a href="#">
+                    <img class="test" src="./images/photoshop.svg" alt="react">
+                    <span class="subtitle">
+                        basic
+                    </span>
+                </a>
+            </li>
+            <li class="knowledge__item">
+                <a href="#">
+                    <img class="test" src="./images/adobelightroom.svg" alt="react">
+                    <span class="subtitle">
+                        basic
+                    </span>
+                </a>
+            </li>
+        </ul>
         <img src="./images/wave2.svg" alt="wave" class="skills__svg">
     </section>
     <section class="project">
