Add form, basic project& update skill

--- a/index.html
+++ b/index.html
@@ -140,31 +140,31 @@
         <img src="./images/wave.svg" alt="wave" class="main__svg">
     </section>
     <section class="contact">
-        <h1 class="contact__title">
-            get in touch!
-        </h1>
+
         <form action="#" class="form" id="form">
             <h1 class="form__title">
-                Sign in
+                Get in touch!
             </h1>
             <div class="form__wrapp">
-                <p class="form__error" id="error-email">
-                </p>
-                <input type="text" class="form__input form__input-error" id="email">
 
+                <input type="text" class="form__input form__input-error" id="email">
                 <label for="#" class="form__label" name="email">
                     Email
                 </label>
             </div>
             <div class="form__wrapp">
-                <p class="form__error" id="error-password">
-                </p>
-                <input type="password" class="form__input" name="password" id="password">
+                <input type="text" class="form__input" name="company" id="company">
                 <label for="#" class="form__label">
-                    Password
+                    Company
                 </label>
             </div>
-            <button class="form__btn" type="submit"> Sign in</button>
+            <div class="form__wrapp">
+                <textarea name="" id="" cols="30" rows="20" class="form__input text"></textarea>
+                <label for="#" class="form__label">
+                    Message
+                </label>
+            </div>
+            <button class="form__btn" type="submit">Send</button>
         </form>
     </section>
 </body>
