add js file to control the form

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
             <button class="form__btn" type="submit">Send</button>
         </form>
     </section>
+    <script src="./js/form.js"></script>
 </body>
 
 </html>
