Add forms label control

--- a/index.html
+++ b/index.html
@@ -141,26 +141,28 @@
     </section>
     <section class="contact">
 
-        <form action="#" class="form" id="form">
+        <form action="#" name="form" class="form" id="form">
             <h1 class="form__title">
                 Get in touch!
             </h1>
             <div class="form__wrapp">
 
                 <input type="text" class="form__input form__input-error" id="email">
-                <label for="#" class="form__label" name="email">
+                <label for="#" id="email-label" class="form__label" name="email">
                     Email
                 </label>
             </div>
             <div class="form__wrapp">
                 <input type="text" class="form__input" name="company" id="company">
-                <label for="#" class="form__label">
+                <label for="#" class="form__label" id="company-label">
                     Company
                 </label>
             </div>
             <div class="form__wrapp">
-                <textarea name="" id="" cols="30" rows="20" class="form__input text"></textarea>
-                <label for="#" class="form__label">
+                <textarea name="" id="message" cols="30" rows="20" class="form__input text"></textarea>
+                </textarea>
+                <!-- <input type="text"> -->
+                <label for="#" class="form__label" id="message-label">
                     Message
                 </label>
             </div>
