update icon skill | desktop

--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
                     </span>
                 </a>
             </li>
+
         </ul>
         <img src="./images/wave2.svg" alt="wave" class="skills__svg">
     </section>
@@ -168,6 +169,7 @@
             <button class="form__btn" type="submit">Send</button>
         </form>
     </section>
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
     <script src="./js/form.js"></script>
 </body>
 
