--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./scss/style.css">
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+
     <title>Portfolio | Mateusz Mamica</title>
+    <script src="https://smtpjs.com/v3/smtp.js">
+    </script>
+
 </head>
 
 <body>
@@ -166,10 +171,10 @@
                     Message
                 </label>
             </div>
-            <button class="form__btn" type="submit">Send</button>
+            <button class="form__btn" id="sendEmail" type="submit">Send</button>
         </form>
     </section>
-    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <!-- <script src="https://smtpjs.com/v3/smtp.js"></script> -->
     <script src="./js/form.js"></script>
 </body>
 
