project section, update waves | mobile

--- a/index.html
+++ b/index.html
@@ -119,30 +119,58 @@
         <img src="./images/wave2.svg" alt="wave" class="skills__svg">
     </section>
     <section class="project">
-
-        <h1 class="project__title">
-            Project
-        </h1>
-        <div class="project__wrapper">
-            <ul class="list">
-                <li class="list__item">
-                    <a href="#">
-                        <img src="./images/exchange.png" alt="exchange">
-                    </a>
-                </li>
-                <li class="list__item">
-                    <a href="#">
-                        <img src="./images/forms.png" alt="form">
-                    </a>
-                </li>
-                <li class="list__item">
-                    <a href="#">
-                        <img src="./images/weather-app.png" alt="weather-app">
-                    </a>
-                </li>
-            </ul>
+        <div class="wrapper">
+            <nav class="project__work">
+                <ul class="bar">
+                    <li class="bar__item">
+                        <a href="#" class="active">
+                            All
+                        </a>
+                    </li>
+                    <li class="bar__item">
+                        <a href="#">
+                            HTML
+                        </a>
+                    </li>
+                    <li class="bar__item">
+                        <a href="#" class="">
+                            javascript
+                        </a>
+                    </li>
+                    <li class="bar__item">
+                        <a href="#">
+                            react
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+            <section class="open">
+                <ul class="open__list">
+                    <li class="open__list__item">
+                        <a href="">
+                            <img src="./images/card.png" alt="card">
+                        </a>
+                    </li>
+                    <li class="open__list__item">
+                        <a href="">
+                            <img src="./images/exchange.png" alt="exchange">
+                        </a>
+                    </li>
+                    <li class="open__list__item">
+                        <a href="">
+                            <img src="./images/offert.png" alt="offert">
+                        </a>
+                    </li>
+                    <li class="open__list__item">
+                        <a href="">
+                            <img src="./images/weather-app.png" alt="weather-app">
+                        </a>
+                    </li>
+                </ul>
+            </section>
         </div>
-        <img src="./images/wave.svg" alt="wave" class="main__svg">
+
+        <img src="./images/wave.svg" alt="wave" class="projects__svg">
     </section>
     <section class="contact">
 
@@ -173,6 +201,11 @@
             </div>
             <button class="form__btn" id="sendEmail" type="submit">Send</button>
         </form>
+        <footer class="copy">
+            <p class="copy__text">
+                &copy; All rights reserved 2021
+            </p>
+        </footer>
     </section>
     <!-- <script src="https://smtpjs.com/v3/smtp.js"></script> -->
     <script src="./js/form.js"></script>
