add title to tech stack, edit project section | mobile, desktop

--- a/index.html
+++ b/index.html
@@ -52,9 +52,10 @@
         <ul class="knowledge">
             <li class="knowledge__item">
                 <a href="#">
+
                     <img class="test" src="./images/html5.svg" alt="html">
                     <span class="subtitle">
-                        Junior
+                        html - Junior
                     </span>
                 </a>
             </li>
@@ -62,7 +63,7 @@
                 <a href="#">
                     <img class="test" src="./images/sass.svg" alt="sass">
                     <span class="subtitle">
-                        Junior
+                        scss - Junior
                     </span>
                 </a>
             </li>
@@ -70,7 +71,7 @@
                 <a href="#">
                     <img class="test" src="./images/javascript.svg" alt="javascript">
                     <span class="subtitle">
-                        Junior
+                        javascript - Junior
                     </span>
                 </a>
             </li>
@@ -78,7 +79,7 @@
                 <a href="#">
                     <img class="test" src="./images/react.svg" alt="react">
                     <span class="subtitle">
-                        basic
+                        react - basic
                     </span>
                 </a>
             </li>
@@ -86,7 +87,7 @@
                 <a href="#">
                     <img class="test" src="./images/mysql.svg" alt="mySQL">
                     <span class="subtitle">
-                        Basic
+                        mysql - Basic
                     </span>
                 </a>
             </li>
@@ -94,7 +95,7 @@
                 <a href="#">
                     <img class="test" src="./images/figma.svg" alt="figma">
                     <span class="subtitle">
-                        Basic
+                        figma - Basic
                     </span>
                 </a>
             </li>
@@ -102,7 +103,7 @@
                 <a href="#">
                     <img class="test" src="./images/photoshop.svg" alt="react">
                     <span class="subtitle">
-                        basic
+                        adobe ps - basic
                     </span>
                 </a>
             </li>
@@ -110,7 +111,7 @@
                 <a href="#">
                     <img class="test" src="./images/adobelightroom.svg" alt="react">
                     <span class="subtitle">
-                        basic
+                        adobe lr - basic
                     </span>
                 </a>
             </li>
