change project section | desktop

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+
     <!-- main section  -->
     <section class="main">
         <h1 class="main__title">
@@ -27,25 +28,7 @@
             <div class="main__flame__single red"></div>
             <div class="main__flame__single orange"></div>
         </div>
-        <!-- <ul class="social">
-            <li class="social__icon">
-                <a href="#">
-                    <img src="./images/Vector-4.svg" alt="ig">
-                </a>
-            </li>
-            <li class="social__icon">
-                <a href="#">
-                    <img src="./images/Vector-2.svg" alt="Fb">
-                </a>
-            </li>
-            <li class="social__icon">
-                <a href="#">
-                    <img src="./images/Vector-3.svg" alt="in">
-                </a>
-            </li>
-        </ul> -->
 
-        <!-- svg code -->
         <div class="main__svg">
 
             <div class="svg-layer">
@@ -58,6 +41,7 @@
             </div>
         </div>
     </section>
+
 
     <!-- PROJECT  -->
 
@@ -130,7 +114,12 @@
                 <div class="work__item">
                     <img src="./images/project.jpg" alt="Card">
                 </div>
-
+                <div class="work__item">
+                    <img src="./images/project.jpg" alt="Card">
+                </div>
+                <div class="work__item">
+                    <img src="./images/project.jpg" alt="Card">
+                </div>
             </div>
         </div>
         <div class="present__svg">
@@ -144,8 +133,6 @@
             </div>
         </div>
     </section>
-
-
 
     <!-- CONTACT  -->
 
@@ -189,3 +176,25 @@
 </body>
 
 </html>
+
+
+
+<!-- <ul class="social">
+            <li class="social__icon">
+                <a href="#">
+                    <img src="./images/Vector-4.svg" alt="ig">
+                </a>
+            </li>
+            <li class="social__icon">
+                <a href="#">
+                    <img src="./images/Vector-2.svg" alt="Fb">
+                </a>
+            </li>
+            <li class="social__icon">
+                <a href="#">
+                    <img src="./images/Vector-3.svg" alt="in">
+                </a>
+            </li>
+        </ul> -->
+
+<!-- svg code -->
