Update project section | mobile&dekstop

--- a/index.html
+++ b/index.html
@@ -100,25 +100,23 @@
 
             </h2>
             <div class="work">
-
                 <div class="work__item">
-                    <img src="./images/project.jpg" alt="Card">
-                </div>
-
-                <div class="work__item">
-                    <img src="./images/project.jpg" alt="Card">
+                    <img src="./images/exchange.png" alt="exchange">
                 </div>
                 <div class="work__item">
-                    <img src="./images/project.jpg" alt="Card">
+                    <img src="./images/offert.png" alt="offert">
                 </div>
                 <div class="work__item">
-                    <img src="./images/project.jpg" alt="Card">
+                    <img src="./images/product-card.png" alt="product-card">
                 </div>
                 <div class="work__item">
-                    <img src="./images/project.jpg" alt="Card">
+                    <img src="./images/offert.png" alt="offert">
                 </div>
                 <div class="work__item">
-                    <img src="./images/project.jpg" alt="Card">
+                    <img src="./images/offert.png" alt="offert">
+                </div>
+                <div class="work__item">
+                    <img src="./images/offert.png" alt="offert">
                 </div>
             </div>
         </div>
