update animation js form | mobile, desktop

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <img src="./images/product-card.png" alt="product-card">
                 </div>
                 <div class="work__item">
-                    <img src="./images/offert.png" alt="offert">
+                    <img src="./images/weather-app.png" alt="weather-app">
                 </div>
                 <div class="work__item">
                     <img src="./images/offert.png" alt="offert">
