--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <img src="./images/weather-app.png" alt="weather-app">
                 </div>
                 <div class="work__item">
-                    <img src="./images/offert.png" alt="offert">
+                    <img src="./images/eated-lap.png" alt="offert">
                 </div>
                 <div class="work__item">
                     <img src="./images/offert.png" alt="offert">
